// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meter render with  1`] = `
<DocumentFragment>
  .cache-yrq8ca-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-vp5f6n-StyledText-StyledStrength {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #a6102d;
}

.cache-1iqflei-StyledWrapper {
  background-color: #f6f6f8;
  border-radius: 4px;
  height: 8px;
  margin-top: 8px;
  margin-bottom: 16px;
}

.cache-oco914-StyledMeter {
  border-radius: 4px;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    aria-live="polite"
    aria-valuemax="5"
    aria-valuemin="0"
    aria-valuenow="0"
    role="progressbar"
    title="MyTitle"
  >
    <p
      class="cache-yrq8ca-StyledText e13y3mga0"
    >
      MyTitle
      <span
        class="e1segop82 cache-vp5f6n-StyledText-StyledStrength e13y3mga0"
      >
        veryWeak
      </span>
    </p>
    <div
      class="cache-1iqflei-StyledWrapper e1segop81"
    >
      <div
        class="cache-oco914-StyledMeter e1segop80"
        style="background-color: rgb(166, 16, 45); width: 20%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meter render with medium password 1`] = `
<DocumentFragment>
  .cache-yrq8ca-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1nxom2m-StyledText-StyledStrength {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: yellow;
}

.cache-1iqflei-StyledWrapper {
  background-color: #f6f6f8;
  border-radius: 4px;
  height: 8px;
  margin-top: 8px;
  margin-bottom: 16px;
}

.cache-oco914-StyledMeter {
  border-radius: 4px;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    aria-live="polite"
    aria-valuemax="5"
    aria-valuemin="0"
    aria-valuenow="2"
    role="progressbar"
    title="MyTitle"
  >
    <p
      class="cache-yrq8ca-StyledText e13y3mga0"
    >
      MyTitle
      <span
        class="e1segop82 cache-1nxom2m-StyledText-StyledStrength e13y3mga0"
      >
        medium
      </span>
    </p>
    <div
      class="cache-1iqflei-StyledWrapper e1segop81"
    >
      <div
        class="cache-oco914-StyledMeter e1segop80"
        style="background-color: yellow; width: 60%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meter render with strong value 1`] = `
<DocumentFragment>
  .cache-yrq8ca-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1r3mc26-StyledText-StyledStrength {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #149a7b;
}

.cache-1iqflei-StyledWrapper {
  background-color: #f6f6f8;
  border-radius: 4px;
  height: 8px;
  margin-top: 8px;
  margin-bottom: 16px;
}

.cache-oco914-StyledMeter {
  border-radius: 4px;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    aria-live="polite"
    aria-valuemax="5"
    aria-valuemin="0"
    aria-valuenow="3"
    role="progressbar"
    title="MyTitle"
  >
    <p
      class="cache-yrq8ca-StyledText e13y3mga0"
    >
      MyTitle
      <span
        class="e1segop82 cache-1r3mc26-StyledText-StyledStrength e13y3mga0"
      >
        strong
      </span>
    </p>
    <div
      class="cache-1iqflei-StyledWrapper e1segop81"
    >
      <div
        class="cache-oco914-StyledMeter e1segop80"
        style="background-color: rgb(20, 154, 123); width: 80%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meter render with very strong value 1`] = `
<DocumentFragment>
  .cache-yrq8ca-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1r3mc26-StyledText-StyledStrength {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #149a7b;
}

.cache-1iqflei-StyledWrapper {
  background-color: #f6f6f8;
  border-radius: 4px;
  height: 8px;
  margin-top: 8px;
  margin-bottom: 16px;
}

.cache-oco914-StyledMeter {
  border-radius: 4px;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    aria-live="polite"
    aria-valuemax="5"
    aria-valuemin="0"
    aria-valuenow="4"
    role="progressbar"
    title="MyTitle"
  >
    <p
      class="cache-yrq8ca-StyledText e13y3mga0"
    >
      MyTitle
      <span
        class="e1segop82 cache-1r3mc26-StyledText-StyledStrength e13y3mga0"
      >
        veryStrong
      </span>
    </p>
    <div
      class="cache-1iqflei-StyledWrapper e1segop81"
    >
      <div
        class="cache-oco914-StyledMeter e1segop80"
        style="background-color: rgb(20, 154, 123); width: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meter render with weak value 1`] = `
<DocumentFragment>
  .cache-yrq8ca-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1tcfq4c-StyledText-StyledStrength {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  float: right;
  vertical-align: top;
  color: #cc4e18;
}

.cache-1iqflei-StyledWrapper {
  background-color: #f6f6f8;
  border-radius: 4px;
  height: 8px;
  margin-top: 8px;
  margin-bottom: 16px;
}

.cache-oco914-StyledMeter {
  border-radius: 4px;
  height: 100%;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

<div
    aria-live="polite"
    aria-valuemax="5"
    aria-valuemin="0"
    aria-valuenow="1"
    role="progressbar"
    title="MyTitle"
  >
    <p
      class="cache-yrq8ca-StyledText e13y3mga0"
    >
      MyTitle
      <span
        class="e1segop82 cache-1tcfq4c-StyledText-StyledStrength e13y3mga0"
      >
        weak
      </span>
    </p>
    <div
      class="cache-1iqflei-StyledWrapper e1segop81"
    >
      <div
        class="cache-oco914-StyledMeter e1segop80"
        style="background-color: rgb(204, 78, 24); width: 40%;"
      />
    </div>
  </div>
</DocumentFragment>
`;
